--- a/06_textMining/텍스트 마이닝 프로젝트.ipynb
+++ b/06_textMining/텍스트 마이닝 프로젝트.ipynb
@@ -2,6 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0931158a",
+   "metadata": {},
+   "source": [
+    "추가로 해볼 수 있는 것\n",
+    "\n",
+    "고도화 한다면 빈도수로 하지는 않음\n",
+    "키워드마다 가중치를 준다\n",
+    "- 화제성에 따른 가중치나 다양한 방식 존재  \n",
+    "- 빈도수 이외의 통계 방법 적용 고려\n",
+    "\n",
+    "비정형 분석 - text mining\n",
+    "word cloud & table 그리기\n",
+    "\n",
+    "1. keyword를 정하고 날짜만 길게 다르게 한다.\n",
+    "\n",
+    "2. 10페이지 까지만 가져오기\n",
+    "\n",
+    "3. 셋이서 500개 분량 정도\n",
+    "\n",
+    "추가적으로 해보고 싶은게 있으면 알려달라고 하심"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8837b3c9",
    "metadata": {},
    "source": [
